add to my repository

--- a/product.html
+++ b/product.html
@@ -47,14 +47,14 @@
     </section>
 
     <section class="product-type">
-        <div>
-            <div>
-                <p><img src="asset/images/bg-1.jpg" alt=""></p>
+        <div class="prod-type-container">
+            <div class="prod-type-item">
+                <p><img class="big-image" src="asset/images/bg-1.jpg" alt=""></p>
                 <div>
-                    <p><img src="asset/images/bg-2.jpg" alt=""></p>
-                    <p><img src="asset/images/bg-3.jpg" alt=""></p>
-                    <p><img src="asset/images/bg-4.jpg" alt=""></p>
-                    <p><img src="asset/images/bg-5.jpg" alt=""></p>
+                    <p><img class="small-image" src="asset/images/bg-2.jpg" alt=""></p>
+                    <p><img class="small-image" src="asset/images/bg-3.jpg" alt=""></p>
+                    <p><img class="small-image" src="asset/images/bg-4.jpg" alt=""></p>
+                    <p><img class="small-image" src="asset/images/bg-5.jpg" alt=""></p>
                 </div>
             </div>
             <div class="text-box">
