add to my repository

--- a/product.html
+++ b/product.html
@@ -52,12 +52,12 @@
                 <p><img class="big-image" src="asset/images/bg-1.jpg" alt=""></p>
                 <div>
                     <p><img class="small-image" src="asset/images/bg-2.jpg" alt=""></p>
-                    <p><img class="small-image" src="asset/images/bg-3.jpg" alt=""></p>
-                    <p><img class="small-image" src="asset/images/bg-4.jpg" alt=""></p>
-                    <p><img class="small-image" src="asset/images/bg-5.jpg" alt=""></p>
+                    <p><img class="small-image" src="asset/images/bg-3.jpeg" alt=""></p>
+                    <p><img class="small-image" src="asset/images/bg-4.jpeg" alt=""></p>
+                    <p><img class="small-image" src="asset/images/bg-5.jpeg" alt=""></p>
                 </div>
             </div>
-            <div class="text-box">
+            <div class="">
                 <h4>Joradn 1</h4>
                 <span>20$</span>
                 <div class="stars">
