add to my repository

--- a/product.html
+++ b/product.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="">
-                <h4>Joradn 1</h4>
+                <h4>Jordan 1</h4>
                 <span>20$</span>
                 <div class="stars">
                     <i class="bi bi-star"></i>
@@ -68,7 +68,7 @@
                     <i class="bi bi-star"></i>
                 </div>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit rerum harum totam sit laboriosam dolorum eaque animi quam ducimus iste?</p>
-                <a href="#">Make a command</a>
+                <a href="#">Add to cart</a>
             </div>
         </div>
     </section>
