add to my repository

--- a/product.html
+++ b/product.html
@@ -57,7 +57,7 @@
                     <p><img class="small-image" src="asset/images/bg-5.jpeg" alt=""></p>
                 </div>
             </div>
-            <div class="">
+            <div class="shoes-text">
                 <h4>Jordan 1</h4>
                 <span>20$</span>
                 <div class="stars">
