add to my repository

--- a/product.html
+++ b/product.html
@@ -71,6 +71,30 @@
                 <a href="#">Add to cart</a>
             </div>
         </div>
+        <div class="prod-type-container">
+            <div class="prod-type-item">
+                <p><img class="big-image" src="asset/images/bg-1.jpg" alt=""></p>
+                <div>
+                    <p><img class="small-image" src="asset/images/bg-2.jpg" alt=""></p>
+                    <p><img class="small-image" src="asset/images/bg-3.jpeg" alt=""></p>
+                    <p><img class="small-image" src="asset/images/bg-4.jpeg" alt=""></p>
+                    <p><img class="small-image" src="asset/images/bg-5.jpeg" alt=""></p>
+                </div>
+            </div>
+            <div class="shoes-text">
+                <h4>Jordan 4</h4>
+                <span>25$</span>
+                <div class="stars">
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                </div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit rerum harum totam sit laboriosam dolorum eaque animi quam ducimus iste?</p>
+                <a href="#">Add to cart</a>
+            </div>
+        </div>
     </section>
 
     <script src="asset/javascript/app.js"></script>
