add to my repository

--- a/product.html
+++ b/product.html
@@ -97,7 +97,7 @@
         </div>
     </section>
 
-    <script src="asset/javascript/app.js"></script>
+    <script src="asset/javascript/prod.js"></script>
 </body>
 
 </html>
