add to my repository

--- a/product.html
+++ b/product.html
@@ -68,7 +68,17 @@
                     <i class="bi bi-star"></i>
                 </div>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit rerum harum totam sit laboriosam dolorum eaque animi quam ducimus iste?</p>
-                <a href="#">Add to cart</a>
+                <div class="cart">
+                    <select name="" id="">
+                        <option value="">Size available</option>
+                        <option value="">40</option>
+                        <option value="">41</option>
+                        <option value="">42</option>
+                        <option value="">43</option>
+                        <option value="">44</option>
+                    </select>
+                    <a href="#">Add to cart</a>
+                </div>
             </div>
         </div>
 
@@ -94,7 +104,17 @@
                     <i class="bi bi-star"></i>
                 </div>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit rerum harum totam sit laboriosam dolorum eaque animi quam ducimus iste?</p>
-                <a href="#">Add to cart</a>
+                <div class="cart">
+                    <select name="" id="">
+                        <option value="">Size available</option>
+                        <option value="">40</option>
+                        <option value="">41</option>
+                        <option value="">42</option>
+                        <option value="">43</option>
+                        <option value="">44</option>
+                    </select>
+                    <a href="#">Add to cart</a>
+                </div>
             </div>
         </div>
     </section>
