add to my repository

--- a/product.html
+++ b/product.html
@@ -77,6 +77,16 @@
                         <option value="">43</option>
                         <option value="">44</option>
                     </select>
+                    <div class="custom-dropdown">
+                        <button class="dropdown-btn" id="color-btn">Select Colors</button>
+                        <div class="dropdown-content">
+                            <label><input type="checkbox" value="red"> Red</label>
+                            <label><input type="checkbox" value="blue"> Blue</label>
+                            <label><input type="checkbox" value="green"> Green</label>
+                            <label><input type="checkbox" value="black"> Black</label>
+                            <label><input type="checkbox" value="white"> White</label>
+                        </div>
+                    </div>
                     <a href="#">Add to cart</a>
                 </div>
             </div>
@@ -113,6 +123,16 @@
                         <option value="">43</option>
                         <option value="">44</option>
                     </select>
+                    <div class="custom-dropdown">
+                        <button class="dropdown-btn" id="color-btn">Select Colors</button>
+                        <div class="dropdown-content">
+                            <label><input type="checkbox" value="red"> Red</label>
+                            <label><input type="checkbox" value="blue"> Blue</label>
+                            <label><input type="checkbox" value="green"> Green</label>
+                            <label><input type="checkbox" value="black"> Black</label>
+                            <label><input type="checkbox" value="white"> White</label>
+                        </div>
+                    </div>
                     <a href="#">Add to cart</a>
                 </div>
             </div>
