--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
                 <p><img src="asset/images/logo.png" alt=""></p>
             </div>
             <div class="list">
-                <a class="home" href="#">Home</a>
-                <a href="#">About us</a>
-                <a href="#">Products</a>
-                <a href="#">Contacts</a>
-                <a class="panier" href="#"><i class="bi bi-cart"></i></a>
+                <div class="list-details">
+                    <a class="home" href="#">Home</a>
+                    <a href="#">About us</a>
+                    <a href="#">Products</a>
+                    <a href="#">Contacts</a>
+                </div>
+                <div class="list-panier">
+                    <a class="panier" href="#"><i class="bi bi-cart"></i></a>
+                </div>
             </div>
         </div>
     </header>
