--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 </div>
                 <div class="list-panier">
                     <a class="panier" href="#"><i class="bi bi-cart"></i></a>
+                    <span>10</span>
                 </div>
             </div>
         </div>
