add to my repository

--- a/product.html
+++ b/product.html
@@ -31,11 +31,16 @@
                 <p><img src="asset/images/logo.png" alt=""></p>
             </div>
             <div class="list">
-                <a class="home" href="index.html">Home</a>
-                <a href="#">About us</a>
-                <a href="#">Products</a>
-                <a href="#">Contacts</a>
-                <a class="panier" href="#"><i class="bi bi-cart"></i></a>
+                <div class="list-details">
+                    <a class="home" href="index.html">Home</a>
+                    <a href="#">About us</a>
+                    <a href="#">Products</a>
+                    <a href="#">Contacts</a>
+                </div>
+                <div class="list-panier">
+                    <a class="panier" href="#"><i class="bi bi-cart"></i></a>
+                    <span>10</span>
+                </div>
             </div>
         </div>
     </header>
