add to my repository

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 </div>
             </div>
         </div>
-        <div class="more-product">
+        <div class="more">
             <a href="product.html">View in details</a>
         </div>
     </section>
@@ -424,6 +424,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="more">
+            <a href="#">More categories</a>
         </div>
 
     </section>
