add to my repository

--- a/shoesdetails.html
+++ b/shoesdetails.html
@@ -25,9 +25,8 @@
 <body>
 
     <section class="shoes-details">
-
         <div class="shoes-image">
-            <p><img src="asset/images/bg-1.jpg" alt=""></p>
+            <p><img class="big-image" src="asset/images/bg-1.jpg" alt=""></p>
         </div>
 
         <div class="shoes-text">
@@ -40,16 +39,17 @@
                 <i class="bi bi-star"></i>
                 <i class="bi bi-star"></i>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit rerum harum totam sit laboriosam dolorum eaque animi quam ducimus iste?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In illo consequuntur architecto quam repudiandae? Sequi quia exercitationem atque animi iste eligendi tenetur sit aliquam quos autem placeat suscipit sed, obcaecati qui nam in? Aut nostrum
+                quae est, officiis exercitationem magni tenetur omnis atque consequatur vel?</p>
             <div class="cart">
                 <select name="" id="">
-                    <option value="">Size available</option>
-                    <option value="">40</option>
-                    <option value="">41</option>
-                    <option value="">42</option>
-                    <option value="">43</option>
-                    <option value="">44</option>
-                </select>
+                        <option value="">Size available</option>
+                        <option value="">40</option>
+                        <option value="">41</option>
+                        <option value="">42</option>
+                        <option value="">43</option>
+                        <option value="">44</option>
+                    </select>
                 <div class="custom-dropdown">
                     <button class="dropdown-btn" id="color-btn">Select Colors</button>
                     <div class="dropdown-content">
@@ -65,6 +65,8 @@
         </div>
     </section>
 
+
+    <script src="asset/javascript/prod.js"></script>
 </body>
 
 </html>
