--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         </div>
 
         <div class="more">
-            <a href="#">More categories</a>
+            <a href="categories.html">More categories</a>
         </div>
 
     </section>
