--- a/product.html
+++ b/product.html
@@ -24,29 +24,10 @@
 
 <body>
 
-    <!--Header part-->
-    <header>
-        <div class="header-content">
-            <div class="logo">
-                <p><img src="asset/images/logo.png" alt=""></p>
-            </div>
-            <div class="list">
-                <div class="list-details">
-                    <a class="home" href="index.html">Home</a>
-                    <a href="#">About us</a>
-                    <a href="#">Products</a>
-                    <a href="#">Contacts</a>
-                </div>
-                <div class="list-panier">
-                    <a class="panier" href="#"><i class="bi bi-cart"></i></a>
-                    <span>10</span>
-                </div>
-            </div>
-        </div>
-    </header>
+
 
     <!--Product home page-->
-    <section class="product-home">
+    <section class="home">
         <h3>#Product</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit debitis quis alias vero tempore?</p>
     </section>
