--- a/categories.html
+++ b/categories.html
@@ -32,7 +32,7 @@
             </div>
             <div class="list">
                 <div class="list-details">
-                    <a class="home" href="#">Home</a>
+                    <a class="home" href="index.html">Home</a>
                     <a href="#">About us</a>
                     <a href="#">Products</a>
                     <a href="#">Contacts</a>
@@ -46,8 +46,8 @@
     </header>
 
     <!--Categories home page-->
-    <section class="home">
-        <h3>#Product</h3>
+    <section class="categories-home">
+        <h3>#Categories</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit debitis quis alias vero tempore?</p>
     </section>
 
