add to my repository

--- a/categories.html
+++ b/categories.html
@@ -51,6 +51,23 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit debitis quis alias vero tempore?</p>
     </section>
 
+    <section class="all-categories">
+        <div class="categories-content">
+            <div>
+                <i class="bi bi-chevron-left"></i>
+                <div class="categorie-images">
+                    <p><img src="asset/images/bg-1.jpg" alt=""></p>
+                    <p><img src="asset/images/bg-2.jpg" alt=""></p>
+                    <p><img src="asset/images/bg-3.jpeg" alt=""></p>
+                    <p><img src="asset/images/bg-4.jpeg" alt=""></p>
+                    <p><img src="asset/images/bg-5.jpeg" alt=""></p>
+                    <p><img src="asset/images/bg-6.jpeg" alt=""></p>
+                </div>
+                <i class="bi bi-chevron-right"></i>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
