add to my repository

--- a/categories.html
+++ b/categories.html
@@ -51,17 +51,18 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit debitis quis alias vero tempore?</p>
     </section>
 
-    <section class="all-categories">
+    <section class="categories">
         <div class="categories-content">
-            <div>
+            <h3>Jordan 1</h3>
+            <div class="all-categories">
                 <i class="bi bi-chevron-left"></i>
                 <div class="categorie-images">
-                    <p><img src="asset/images/bg-1.jpg" alt=""></p>
-                    <p><img src="asset/images/bg-2.jpg" alt=""></p>
-                    <p><img src="asset/images/bg-3.jpeg" alt=""></p>
-                    <p><img src="asset/images/bg-4.jpeg" alt=""></p>
-                    <p><img src="asset/images/bg-5.jpeg" alt=""></p>
-                    <p><img src="asset/images/bg-6.jpeg" alt=""></p>
+                    <p><img src="asset/images/product/prod-1.png" alt=""></p>
+                    <p><img src="asset/images/product/prod-2.png" alt=""></p>
+                    <p><img src="asset/images/product/prod-3.png" alt=""></p>
+                    <p><img src="asset/images/product/prod-4.png" alt=""></p>
+                    <p><img src="asset/images/product/prod-5.png" alt=""></p>
+                    <p><img src="asset/images/product/prod-6.png" alt=""></p>
                 </div>
                 <i class="bi bi-chevron-right"></i>
             </div>
