add to my repository

--- a/categories.html
+++ b/categories.html
@@ -57,14 +57,13 @@
             <div class="all-categories">
                 <i class="bi bi-chevron-left" id="left-arrow"></i>
                 <div class="categorie-images" id="categorie-images">
-                    <p><img src="asset/images/product/prod-1.png" alt="Product 1"></p>
-                    <p><img src="asset/images/product/prod-2.png" alt="Product 2"></p>
-                    <p><img src="asset/images/product/prod-3.png" alt="Product 3"></p>
-                    <p><img src="asset/images/product/prod-4.png" alt="Product 4"></p>
-                    <p><img src="asset/images/product/prod-5.png" alt="Product 5"></p>
-                    <p><img src="asset/images/product/prod-6.png" alt="Product 6"></p>
-                    <p><img src="asset/images/product/prod-3.png" alt="Product 3"></p>
-                    <p><img src="asset/images/product/prod-4.png" alt="Product 4"></p>
+                    <p><img src="asset/images/bg-3.jpeg" alt="Product 1"></p>
+                    <p><img src="asset/images/bg-4.jpeg" alt="Product 2"></p>
+                    <p><img src="asset/images/bg-5.jpeg" alt="Product 3"></p>
+                    <p><img src="asset/images/bg-6.jpeg" alt="Product 4"></p>
+                    <p><img src="asset/images/bg-7.jpeg" alt="Product 5"></p>
+                    <p><img src="asset/images/bg-1.jpg" alt="Product 6"></p>
+                    <p><img src="asset/images/bg-2.jpg" alt="Product 7"></p>
                 </div>
                 <i class="bi bi-chevron-right" id="right-arrow"></i>
             </div>
