--- a/categories.html
+++ b/categories.html
@@ -53,7 +53,7 @@
 
     <section class="categories">
         <div class="categories-content">
-            <h3>Jordan 1</h3>
+            <h3>All chelsea boots</h3>
             <div class="all-categories">
                 <i class="bi bi-chevron-left" id="left-arrow"></i>
                 <div class="categorie-images" id="categorie-images">
@@ -70,7 +70,7 @@
         </div>
 
         <div class="categories-content">
-            <h3>Jordan 2</h3>
+            <h3>All Jordan 2</h3>
             <div class="all-categories">
                 <i class="bi bi-chevron-left" id="left-arrow"></i>
                 <div class="categorie-images" id="categorie-images">
@@ -87,7 +87,7 @@
         </div>
 
         <div class="categories-content">
-            <h3>Jordan 3</h3>
+            <h3>All timberlands</h3>
             <div class="all-categories">
                 <i class="bi bi-chevron-left" id="left-arrow"></i>
                 <div class="categorie-images" id="categorie-images">
