--- a/categories.html
+++ b/categories.html
@@ -57,7 +57,7 @@
             <div class="all-categories">
                 <i class="bi bi-chevron-left" id="left-arrow"></i>
                 <div class="categorie-images" id="categorie-images">
-                    <p><img src="asset/images/bg-3.jpeg" alt="Product 1"></p>
+                    <p><img onclick="window.location.href ='shoesdetails.html'" src="asset/images/bg-3.jpeg" alt="Product 1"></p>
                     <p><img src="asset/images/bg-4.jpeg" alt="Product 2"></p>
                     <p><img src="asset/images/bg-5.jpeg" alt="Product 3"></p>
                     <p><img src="asset/images/bg-6.jpeg" alt="Product 4"></p>
