add to my repository

--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
 
     <!--css-->
     <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="asset/css/product.css">
 
     <!--Font family-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
@@ -27,12 +28,24 @@
         <h3>Login</h3>
         <form action="">
             <div class="all-inputs">
-
+                <i class="bi bi-envelope"></i>
+                <input type="email" placeholder="Enter email">
             </div>
             <div class="all-inputs">
+                <i class="bi bi-key"></i>
+                <input type="password" placeholder="Enter password">
                 <div class="eyes">
-
+                    <i class="bi bi-eye"></i>
+                    <i class="bi bi-eye-slash"></i>
                 </div>
+            </div>
+            <a href="#">Forgot password?</a>
+            <div class="submit">
+                <input type="submit" value="Login">
+            </div>
+            <div>
+                <p>Don't have an account?</p>
+                <a href="#">Sign up</a>
             </div>
         </form>
     </div>
