--- a/login.html
+++ b/login.html
@@ -25,21 +25,25 @@
 <!-- Le css de cette page se trouve dans product -->
 <section class="login-section">
     <div class="login">
-        <h3>Login</h3>
+        <h2>Login</h2>
         <form action="">
             <div class="all-inputs">
                 <i class="bi bi-envelope"></i>
                 <input type="email" placeholder="Enter email">
             </div>
-            <div class="all-inputs">
-                <i class="bi bi-key"></i>
-                <input type="password" placeholder="Enter password">
+            <div class="all-inputs password">
+                <div>
+                    <i class="bi bi-key"></i>
+                    <input type="password" placeholder="Enter password">
+                </div>
                 <div class="eyes">
                     <i class="bi bi-eye"></i>
                     <i class="bi bi-eye-slash"></i>
                 </div>
             </div>
-            <a href="#">Forgot password?</a>
+            <div class="forgot-password">
+                <a href="#">Forgot password?</a>
+            </div>
             <div class="submit">
                 <input type="submit" value="Login">
             </div>
