--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
             <div class="submit">
                 <input type="submit" value="Login">
             </div>
-            <div>
+            <div class="account">
                 <p>Don't have an account?</p>
                 <a href="#">Sign up</a>
             </div>
