--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                 <input type="email" placeholder="Enter email">
             </div>
             <div class="all-inputs password">
-                <div>
+                <div style="display: flex; gap: 10px; -webkit-column-gap:10px;">
                     <i class="bi bi-key"></i>
                     <input type="password" placeholder="Enter password">
                 </div>
