add to my repository

--- a/login.html
+++ b/login.html
@@ -37,8 +37,8 @@
                     <input type="password" placeholder="Enter password">
                 </div>
                 <div class="eyes">
-                    <i class="bi bi-eye"></i>
-                    <i class="bi bi-eye-slash"></i>
+                    <i class="bi bi-eye open"></i>
+                    <i class="bi bi-eye-slash close hidden"></i>
                 </div>
             </div>
             <div class="forgot-password">
