add to my repository

--- a/login.html
+++ b/login.html
@@ -22,41 +22,41 @@
 
 </head>
 
-<!-- Le css de cette page se trouve dans product -->
-<section class="login-section">
-    <div class="login">
-        <h2>Login</h2>
-        <form action="">
-            <div class="all-inputs">
-                <i class="bi bi-envelope"></i>
-                <input type="email" placeholder="Enter email">
-            </div>
-            <div class="all-inputs password">
-                <div class="pass">
-                    <i class="bi bi-key"></i>
-                    <input type="password" placeholder="Enter password">
-                </div>
-                <div class="eyes">
-                    <i class="bi bi-eye open"></i>
-                    <i class="bi bi-eye-slash close hidden"></i>
-                </div>
-            </div>
-            <div class="forgot-password">
-                <a href="#">Forgot password?</a>
-            </div>
-            <div class="submit">
-                <input type="submit" value="Login">
-            </div>
-            <div class="account">
-                <p>Don't have an account?</p>
-                <a href="#">Sign up</a>
-            </div>
-        </form>
-    </div>
-</section>
-
 <body>
+    <!-- Le css de cette page se trouve dans product -->
+    <section class="login-section">
+        <div class="login">
+            <h2>Login</h2>
+            <form action="">
+                <div class="all-inputs">
+                    <i class="bi bi-envelope"></i>
+                    <input type="email" placeholder="Enter email">
+                </div>
+                <div class="all-inputs passwo">
+                    <div class="pass">
+                        <i class="bi bi-key"></i>
+                        <input class="password" type="password" placeholder="Enter password">
+                    </div>
+                    <div class="eyes">
+                        <i class="bi bi-eye open"></i>
+                        <i class="bi bi-eye-slash close hidden"></i>
+                    </div>
+                </div>
+                <div class="forgot-password">
+                    <a href="#">Forgot password?</a>
+                </div>
+                <div class="submit">
+                    <input type="submit" value="Login">
+                </div>
+                <div class="account">
+                    <p>Don't have an account?</p>
+                    <a href="#">Sign up</a>
+                </div>
+            </form>
+        </div>
+    </section>
 
+    <script src="asset/javascript/app.js"></script>
 </body>
 
 </html>
