add to my repository

--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Forgot password</title>
 
     <!--css-->
     <link rel="stylesheet" href="asset/css/style.css">
@@ -26,31 +26,19 @@
     <!-- Le css de cette page se trouve dans product -->
     <section class="login-section">
         <div class="login">
-            <h2>Login</h2>
+            <h2>Forgot password</h2>
             <form action="">
-                <div class="all-inputs">
-                    <i class="bi bi-envelope"></i>
-                    <input type="email" placeholder="Enter email">
+                <div class="all-inputs passwo">
+                    <i class="bi bi-key"></i>
+                    <input class="password" type="password" placeholder="Enter new password">
                 </div>
                 <div class="all-inputs passwo">
-                    <div class="pass">
-                        <i class="bi bi-key"></i>
-                        <input class="password" type="password" placeholder="Enter password">
-                    </div>
-                    <div class="eyes">
-                        <i class="bi bi-eye open"></i>
-                        <i class="bi bi-eye-slash close hidden"></i>
-                    </div>
+                    <i class="bi bi-key"></i>
+                    <input class="password" type="password" placeholder="Confirm new password">
                 </div>
-                <div class="forgot-password">
-                    <a href="forgotpassword.html">Forgot password?</a>
-                </div>
-                <div class="submit">
-                    <input type="submit" value="Login">
-                </div>
-                <div class="account">
-                    <p>Don't have an account?</p>
-                    <a href="#">Sign up</a>
+
+                <div style="margin-top: 15px;" class="submit">
+                    <input type="submit" value="Change">
                 </div>
             </form>
         </div>
