--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="account">
                     <p>Don't have an account?</p>
-                    <a href="#">Sign up</a>
+                    <a href="createaccount.html">Sign up</a>
                 </div>
             </form>
         </div>
