--- a/createaccount.html
+++ b/createaccount.html
@@ -36,7 +36,7 @@
                     <i class="bi bi-envelope"></i>
                     <input type="email" placeholder="Enter email">
                 </div>
-                <div class="all-inputs passwo">
+                <div class="all-inputs">
                     <i class="bi bi-key"></i>
                     <input class="password" type="password" placeholder="Enter password">
                 </div>
