add to my repository

--- a/createaccount.html
+++ b/createaccount.html
@@ -26,7 +26,7 @@
     <!-- Le css de cette page se trouve dans product -->
     <section class="login-section">
         <div class="login">
-            <h2>Forgot password</h2>
+            <h2>Sign up</h2>
             <form action="">
                 <div class="all-inputs">
                     <i class="bi bi-person"></i>
