add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -24,6 +24,17 @@
 
 <body>
 
+    <section class="user-dashboard">
+        <div class="dashboard">
+            <div class="left-side">
+
+            </div>
+        </div>
+        <div class="right-side">
+
+        </div>
+    </section>
+
 </body>
 
 </html>
