add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -27,7 +27,17 @@
     <section class="user-dashboard">
         <div class="dashboard">
             <div class="left-side">
-
+                <nav>
+                    <a href="#">
+                        <i class="bi bi-clipboard-pulse"></i> Dashboard
+                    </a>
+                    <a href="#">
+                        <i class="bi bi-person-check"></i> My profile
+                    </a>
+                    <a href="#">
+                        <i class="bi bi-credit-card-2-front"></i> Payment
+                    </a>
+                </nav>
             </div>
         </div>
         <div class="right-side">
