add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -24,6 +24,9 @@
 
 <body>
 
+    <!-- Css of this page is located in asset/css/product.ss -->
+
+    <!-- Dashboard user -->
     <section class="user-dashboard">
         <div class="dashboard">
             <div class="left-side">
