--- a/dashboard.html
+++ b/dashboard.html
@@ -40,6 +40,9 @@
                     <a href="#">
                         <i class="bi bi-credit-card-2-front"></i> Payment
                     </a>
+                    <a href="#">
+                        <i class="bi bi-box-arrow-in-right"></i> Log out
+                    </a>
                 </nav>
             </div>
         </div>
