add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -32,16 +32,20 @@
             <div class="left-side">
                 <nav>
                     <a href="#">
-                        <i class="bi bi-clipboard-pulse"></i> Dashboard
+                        <i class="bi bi-clipboard-pulse"></i>
+                        <span>Dashboard</span>
                     </a>
                     <a href="#">
-                        <i class="bi bi-person-check"></i> My profile
+                        <i class="bi bi-person-check"></i>
+                        <span>My profile</span>
                     </a>
                     <a href="#">
-                        <i class="bi bi-credit-card-2-front"></i> Payment
+                        <i class="bi bi-credit-card-2-front"></i>
+                        <span>Payment</span>
                     </a>
                     <a href="#">
-                        <i class="bi bi-box-arrow-in-right"></i> Log out
+                        <i class="bi bi-box-arrow-in-right"></i>
+                        <span>Log out</span>
                     </a>
                 </nav>
             </div>
