add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -31,7 +31,7 @@
         <div class="dashboard">
             <div class="left-side">
                 <nav>
-                    <a href="#">
+                    <a class="act" href="#">
                         <i class="bi bi-clipboard-pulse"></i>
                         <span>Dashboard</span>
                     </a>
