add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -51,7 +51,9 @@
             </div>
         </div>
         <div class="right-side">
-
+            <div class="top-profil">
+                <p><img src="" alt=""></p>
+            </div>
         </div>
     </section>
 
