--- a/dashboard.html
+++ b/dashboard.html
@@ -52,7 +52,9 @@
         </div>
         <div class="right-side">
             <div class="top-profil">
-                <p><img src="" alt=""></p>
+                <span>Anicet chiza</span>
+                <p><img src="asset/images/profil.jpg" alt=""></p>
+                <div class="online"></div>
             </div>
         </div>
     </section>
