add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -53,7 +53,9 @@
         <div class="right-side">
             <div class="top-profil">
                 <span>Anicet chiza</span>
-                <p><img src="asset/images/profil.jpg" alt=""></p>
+                <div>
+                    <p><img src="asset/images/profil.jpg" alt=""></p>
+                </div>
                 <div class="online"></div>
             </div>
         </div>
