--- a/dashboard.html
+++ b/dashboard.html
@@ -54,9 +54,9 @@
             <div class="top-profil">
                 <span>Anicet chiza</span>
                 <div>
-                    <p><img src="asset/images/profil.jpg" alt=""></p>
+                    <p class="profil-pic"><img src="asset/images/profil.jpg" alt=""></p>
+                    <div class="online"></div>
                 </div>
-                <div class="online"></div>
             </div>
         </div>
     </section>
