add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -58,8 +58,22 @@
                     <div class="online"></div>
                 </div>
             </div>
+
+            <div class="profil-details">
+                <div class="categories-list">
+                    <ul>
+                        <li class="active" data-filter="men-shoes">My profile</li>
+                        <li data-filter="wemen">Change profile</li>
+                    </ul>
+                </div>
+            </div>
         </div>
+
     </section>
+
+
+    <script src="asset/javascript/app.js"></script>
+
 
 </body>
 
