add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -66,6 +66,35 @@
                         <li data-filter="wemen">Change profile</li>
                     </ul>
                 </div>
+
+                <div class="myprofil">
+                    <h3>My profile</h3>
+                    <p><img src="asset/images/profil.jpg" alt=""></p>
+                    <div>
+                        <p>First name:</p>
+                        <span>Anicet</span>
+                    </div>
+                    <div>
+                        <p>Last name:</p>
+                        <span>Chiza</span>
+                    </div>
+                    <div>
+                        <p>Email:</p>
+                        <span>carlosndai@gmail.com</span>
+                    </div>
+                    <div>
+                        <p>Phone number:</p>
+                        <span>Chiza</span>
+                    </div>
+                    <div>
+                        <p>Country:</p>
+                        <span>Rwanda</span>
+                    </div>
+                    <div>
+                        <p>City:</p>
+                        <span>Kigali</span>
+                    </div>
+                </div>
             </div>
         </div>
 
