--- a/dashboard.html
+++ b/dashboard.html
@@ -69,37 +69,41 @@
 
                 <div class="myprofil">
                     <div class="myprofil-details">
-                        <h3>My profile</h3>
-                        <p><img src="asset/images/profil.jpg" alt=""></p>
-                        <div>
-                            <i class="bi bi-person-circle"></i>
-                            <p>First name:</p>
-                            <span>Anicet</span>
+                        <div class="profil-intro">
+                            <h3>My profile</h3>
+                            <p><img src="asset/images/profil.jpg" alt=""></p>
                         </div>
-                        <div>
-                            <i class="bi bi-person-circle"></i>
-                            <p>Last name:</p>
-                            <span>Chiza</span>
-                        </div>
-                        <div>
-                            <i class="bi bi-envelope"></i>
-                            <p>Email:</p>
-                            <span>carlosndai@gmail.com</span>
-                        </div>
-                        <div>
-                            <i class="bi bi-telephone"></i>
-                            <p>Phone number:</p>
-                            <span>Chiza</span>
-                        </div>
-                        <div>
-                            <i class="bi bi-flag"></i>
-                            <p>Country:</p>
-                            <span>Rwanda</span>
-                        </div>
-                        <div>
-                            <i class="bi bi-app-indicator"></i>
-                            <p>City:</p>
-                            <span>Kigali</span>
+                        <div class="all-info">
+                            <div>
+                                <i class="bi bi-person-circle"></i>
+                                <p>First name:</p>
+                                <span>Anicet</span>
+                            </div>
+                            <div>
+                                <i class="bi bi-person-circle"></i>
+                                <p>Last name:</p>
+                                <span>Chiza</span>
+                            </div>
+                            <div>
+                                <i class="bi bi-envelope"></i>
+                                <p>Email:</p>
+                                <span>carlosndai@gmail.com</span>
+                            </div>
+                            <div>
+                                <i class="bi bi-telephone"></i>
+                                <p>Phone number:</p>
+                                <span>Chiza</span>
+                            </div>
+                            <div>
+                                <i class="bi bi-flag"></i>
+                                <p>Country:</p>
+                                <span>Rwanda</span>
+                            </div>
+                            <div>
+                                <i class="bi bi-app-indicator"></i>
+                                <p>City:</p>
+                                <span>Kigali</span>
+                            </div>
                         </div>
                     </div>
                 </div>
