add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -92,7 +92,7 @@
                             <div>
                                 <i class="bi bi-telephone"></i>
                                 <p>Phone number:</p>
-                                <span>Chiza</span>
+                                <span>+250 123456789</span>
                             </div>
                             <div>
                                 <i class="bi bi-flag"></i>
@@ -106,6 +106,19 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <div class="change-profil">
+                    <h3>Change my profil</h3>
+                    <form action="">
+                        <input type="text" placeholder="First name">
+                        <input type="text" placeholder="Second name">
+                        <input type="email" placeholder="Your email">
+                        <input type="number" placeholder="Your phone number">
+                        <input type="text" placeholder="Your country">
+                        <input type="text" placeholder="First city">
+                        <input type="File">
+                    </form>
                 </div>
             </div>
         </div>
