add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -108,18 +108,26 @@
                     </div>
                 </div>
 
-                <div class="change-profil">
-                    <h3>Change my profil</h3>
-                    <form action="">
-                        <input type="text" placeholder="First name">
-                        <input type="text" placeholder="Second name">
-                        <input type="email" placeholder="Your email">
-                        <input type="number" placeholder="Your phone number">
-                        <input type="text" placeholder="Your country">
-                        <input type="text" placeholder="First city">
-                        <input type="File">
-                    </form>
+                <div class="myprofil">
+                    <div class="myprofil-details">
+                        <h3>Change my profil</h3>
+                        <form action="">
+                            <div>
+                                <input type="text" placeholder="First name">
+                                <input type="text" placeholder="Second name">
+                                <input type="email" placeholder="Your email">
+                                <input type="number" placeholder="Your phone number">
+                                <input type="text" placeholder="Your country">
+                                <input type="text" placeholder="First city">
+                                <input type="File">
+                            </div>
+                            <div>
+                                <input type="submit" value="Change">
+                            </div>
+                        </form>
+                    </div>
                 </div>
+
             </div>
         </div>
 
