add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -67,7 +67,7 @@
                     </ul>
                 </div>
 
-                <div class="myprofil">
+                <div class="myprofil shoes-item men-shoes">
                     <div class="myprofil-details">
                         <div class="profil-intro">
                             <h3>My profile</h3>
@@ -108,9 +108,9 @@
                     </div>
                 </div>
 
-                <div class="myprofil">
+                <div class="myprofil shoes-item children">
                     <div class="myprofil-details">
-                        <h3>Change my profil</h3>
+                        <h3 style="margin-top: 20px; text-align:center;">Change my profil</h3>
                         <form action="">
                             <div>
                                 <input type="text" placeholder="First name">
@@ -121,7 +121,7 @@
                                 <input type="text" placeholder="First city">
                                 <input type="File">
                             </div>
-                            <div>
+                            <div class="sub">
                                 <input type="submit" value="Change">
                             </div>
                         </form>
