add to my repository

--- a/dashboard.html
+++ b/dashboard.html
@@ -108,8 +108,8 @@
                     </div>
                 </div>
 
-                <div class="myprofil shoes-item children">
-                    <div class="myprofil-details">
+                <div class="shoes-item wemen">
+                    <div class="myprofil-details profil-item">
                         <h3 style="margin-top: 20px; text-align:center;">Change my profil</h3>
                         <form action="">
                             <div>
@@ -122,7 +122,7 @@
                                 <input type="File">
                             </div>
                             <div class="sub">
-                                <input type="submit" value="Change">
+                                <input type="submit" value="Change profil">
                             </div>
                         </form>
                     </div>
